k8s/frontend/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: microadventures
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`microadventures.aronhedl.com`)
      services:
        - kind: Service
          name: frontend
          port: 8080
          scheme: http
